Fixing issue in Home page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture</h1>
+    <h1>Accenture - High Performance Delivered</h1>
     <ul>
         <li>Consulting</li>
         <li>Technology</li>
-        <li>Outsorcing</li>
+        <li>Operation</li>
     </ul>
 </body>
 </html>
