--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Accenture</h1>
+    <h1>Accenture - High Performance. Delivered.</h1>
     <ul>
-        <li>Consulting</li>
-        <li>Technology</li>
-        <li>Outsorcing</li>
+        <li>consulting</li>
+        <li>technology</li>
+        <li>operations</li>
+        <li>strategy</li>
+        <li>digital</li>
     </ul>
 </body>
 </html>
